2007-01-27  Tim-Philipp Müller  <tim at centricular dot net>

	* tests/icles/videocrop-test.c: (test_with_caps):
	  Catch errors while the test is running.

2007-01-25  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/wavpack/gstwavpackparse.c: (gst_wavpack_parse_src_query):
	Fix the SEEKING query. We can seek if we are in pull mode, not the
	other way around. Also set the correct format in the seeking query and
	handle the case where the headers are not read yet and we can't say
	anything about our seeking capabilities.
	
2007-01-25  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/wavpack/gstwavpackdec.c: (gst_wavpack_dec_base_init):
	* ext/wavpack/gstwavpackparse.c: (gst_wavpack_parse_base_init):
	Fix spelling in 2 places: It's called Wavpack, not WavePack.

2007-01-25  Edward Hervey  <edward@fluendo.com>

	* gst/multifile/gstmultifilesink.c:
	(gst_multi_file_sink_class_init):
	* gst/multifile/gstmultifilesrc.c: (gst_multi_file_src_class_init):
	* gst/mve/gstmvedemux.c: (gst_mve_video_create_buffer),
	(gst_mve_video_palette), (gst_mve_video_code_map),
	(gst_mve_audio_init), (gst_mve_audio_data), (gst_mve_timer_create),
	(gst_mve_demux_chain):
	* gst/mve/gstmvemux.c: (gst_mve_mux_push_chunk):
	* gst/mve/mveaudioenc.c: (mve_compress_audio):
	* gst/mve/mvevideodec16.c: (ipvideo_copy_block):
	* gst/mve/mvevideodec8.c: (ipvideo_copy_block):
	* gst/mve/mvevideoenc16.c: (mve_encode_frame16):
	* gst/mve/mvevideoenc8.c: (mve_encode_frame8):
	Use proper print statements.
	Fixes build on mac os x.
	<wingo> oo look at me my name is edward i'm hacking on macos wooo

2007-01-24  Wim Taymans  <wim@fluendo.com>

	* gst/qtdemux/gstrtpxqtdepay.c:
	Fix caps on the depayloader.

2007-01-17  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/mythtv/gstmythtvsrc.c: (gst_mythtv_src_set_property):
	  Use break here instead of goto.

2007-01-13  Andy Wingo  <wingo@pobox.com>

	* gst/interleave/deinterleave.c (gst_deinterleave_add_new_pads):
	Use fixed caps on src pads.